--- a/src/Components/UI/reviewBox/reviewBox.css
+++ b/src/Components/UI/reviewBox/reviewBox.css
@@ -51,6 +51,6 @@
 
 @media (max-width: 576px) {
   .review-box {
-    max-width: 70%;
+    max-width: 80%;
   }
 }
